// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/settings.ts should handle HAS_STARRED.SUCCESS 1`] = `
Immutable.Map {
  "participating": false,
  "playSound": true,
  "showNotifications": true,
  "markOnClick": false,
  "openAtStartup": false,
  "hasStarred": true,
  "showAppIcon": "both",
}
`;

exports[`reducers/settings.ts should handle HAS_STARRED.SUCCESS 2`] = `
Immutable.Map {
  "participating": false,
  "playSound": true,
  "showNotifications": true,
  "markOnClick": false,
  "openAtStartup": false,
  "hasStarred": false,
  "showAppIcon": "both",
}
`;

exports[`reducers/settings.ts should handle UPDATE_SETTING 1`] = `
Immutable.Map {
  "participating": true,
  "playSound": true,
  "showNotifications": true,
  "markOnClick": false,
  "openAtStartup": false,
  "hasStarred": false,
  "showAppIcon": "both",
}
`;

exports[`reducers/settings.ts should handle UPDATE_SETTING 2`] = `
Immutable.Map {
  "participating": false,
  "playSound": true,
  "showNotifications": true,
  "markOnClick": false,
  "openAtStartup": true,
  "hasStarred": false,
  "showAppIcon": "both",
}
`;

exports[`reducers/settings.ts should return the initial state 1`] = `
Immutable.Map {
  "participating": false,
  "playSound": true,
  "showNotifications": true,
  "markOnClick": false,
  "openAtStartup": false,
  "hasStarred": false,
  "showAppIcon": "both",
}
`;
